# magic_app

./: .flake8  .gitignore  .pre-commit-config.yaml  Magic_App.py  README.md  http_cache.sqlite  magic.ipynb  performance.py  pyproject.toml  requirements.txt
.github/workflows/: get_fundamentus_data.yml  run-performance.yml
app/: __init__.py  config.py  main.py
app/clients/: __init__.py  cdi_benchmark_client.py
app/controllers/: __init__.py  live_study_controller.py  stock_list_controller.py
app/repositories/: __init__.py  fundamentus_repository.py  history_repository.py
app/services/: benchmark_service.py  reallocation_service.py  stock_selector_service.py
app/utils/: formatting.py
app/views/: __init__.py
backend/: __init__.py
backend/jobs/: __init__.py  analyze_performance_history.py  build_performance_history_parquet.py  build_reallocation_start_date_notebook.py  (+4 more)
data/: benchmark_history.parquet  carteira_anterior.csv  cdi_b3_falhas.csv  cdi_b3_ibov_yahoo.csv  fundamentus_data.parquet  performance.csv  performance_committed_since_2026-03-10.parquet  performance_period_analysis.parquet
notebooks/: analise_divergencia_cotacoes.ipynb  analise_realocacao_por_data_inicial.ipynb  extracao_cdi_b3_ibov_yahoo.ipynb  extracao_cdi_ibov_yahoo_finance.ipynb  http_cache.sqlite  testes.ipynb
scripts/: analyze_performance_history.py  build_performance_history_parquet.py  build_reallocation_start_date_notebook.py  get_fundamentus_data.py  performance.py  repair_performance_data.py  update_fundamentus.sh  update_market_benchmarks.py
shared/: __init__.py  config.py
(+16 files in other folders)
