[tool.poetry]
name = "magic-app"
version = "0.1.0"
description = ""
authors = ["Gustavo Correa <gustavo.araujo.correa@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
taskipy = "^1.14.1"
pre-commit = "^4.0.1"
pandas = "^2.2.3"
fundamentus = "^0.3.2"
beautifulsoup4 = "^4.12.3"
html5lib = "^1.1"
ipykernel = "^6.29.5"
pyarrow = "^19.0.1"
matplotlib = "^3.10.8"
streamlit = "^1.55.0"
yfinance = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = """
isort scripts
black scripts
"""
